tests and simple client improved